--- a/lib/file/index.html
+++ b/lib/file/index.html
@@ -144,7 +144,7 @@
 </ul>
 <blockquote>
 <p>打开一个文件, 返回打开的文件对象.</p>
-<p>如果文件不存在, 返回-1.</p>
+<p>如果文件不存在, 返回<code>&amp;null</code>.</p>
 </blockquote>
 <hr />
 <p><em>fileRead &amp;fileobj #size=-1</em></p>
