--- a/lib/util/index.html
+++ b/lib/util/index.html
@@ -138,7 +138,7 @@
 </ul>
 <blockquote>
 <p>分别将输入转换为int类型, float类型, 以及按照文件名打开一个文件</p>
-<p>失败都会返回<code>$NULL$</code></p>
+<p>失败都会返回<code>&amp;null</code>.</p>
 </blockquote>
               
             </div>
