--- a/index.html
+++ b/index.html
@@ -170,10 +170,7 @@
 <li><a href="howto/">xscript如何工作</a></li>
 </ul>
 <hr />
-<p>非常抱歉, xscript文档是全简体中文版的, 请大家谅解. 你可以使用Google Chrome的翻译功能来阅读文档.</p>
-<blockquote>
-<p>我是中国人</p>
-</blockquote>
+<p>非常抱歉, xscript文档是简体中文版的, 请大家谅解. 你可以使用Google Chrome的翻译功能来阅读文档.</p>
 <p>xscript文档的多语种版本是有帮助的, 希望您能够将该文档翻译成相应的语言.</p>
               
             </div>
@@ -230,5 +227,5 @@
 
 <!--
 MkDocs version : 1.1
-Build Date UTC : 2020-06-05 08:43:44
+Build Date UTC : 2020-06-05 11:12:33
 -->
