--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <p>这门语言是设计为嵌入式的, 这样也可以保证安全以及运行时的效果</p>
 </blockquote>
 <h2 id="_1">如何运行我的代码?</h2>
-<p>你可以在xscript目录下, 通过终端输入<code>xscript.py [FILE]</code>来运行.</p>
+<p>你可以在xscript目录下, 通过终端输入<code>xscript.py &lt;file&gt; [args...]</code>来运行.</p>
 <p>当然, 你可以看看<code>xscript/script</code>目录下的例子.</p>
 <h2 id="_2">如何调试我的代码?</h2>
 <p>在<code>2020-5-10</code>次提交中更新了debug的用法.</p>
@@ -160,7 +160,7 @@
 <h2 id="_3">它有多快?</h2>
 <p>求xscript运行时有多快是一件麻烦的事情, 我们不高兴做这些没有意义的事情.</p>
 <blockquote>
-<p>经过对比: python比xscript快了一秒左右(<code>script/circle.xs</code>)</p>
+<p>经过对比: python比xscript快了一秒左右(<code>script/circle.xs</code>和基本上相同的python代码)</p>
 </blockquote>
 <h2 id="xscript_2">学习, 改进xscript</h2>
 <p>xscript是一门开源编程语言, 它现在还处于开发阶段, 希望你能帮助改进xscript.</p>
@@ -227,5 +227,5 @@
 
 <!--
 MkDocs version : 1.1
-Build Date UTC : 2020-06-07 04:54:39
+Build Date UTC : 2020-06-07 05:08:17
 -->
