--- a/learn/install/index.html
+++ b/learn/install/index.html
@@ -148,8 +148,9 @@
 cd xscript
 </code></pre>
 
+<p>或下载<a href="https://github.com/jason-bowen-zheng/xscript/archive/master.zip">zip文件</a>.</p>
 <h2 id="linux">Linux下安装</h2>
-<p>clone好了就可以了, <code>xscript</code>目录下的<code>xscript.py</code>是主程序.</p>
+<p>clone好了就可以了, <code>xscript</code>目录下的<code>xscript</code>是主程序.</p>
 <h2 id="windows">Windows下安装</h2>
 <p>和Linux一样.</p>
 <h2 id="_1">简单一些</h2>
