--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <p>这门语言是设计为嵌入式的, 这样也可以保证安全以及运行时的效果</p>
 </blockquote>
 <h2 id="_1">如何运行我的代码?</h2>
-<p>你可以在xscript目录下, 通过终端输入<code>xscript.py &lt;file&gt; [args...]</code>来运行.</p>
+<p>你可以在xscript目录下, 通过终端输入<code>xscript &lt;file&gt; [args...]</code>来运行.</p>
 <p>当然, 你可以看看<code>xscript/script</code>目录下的例子.</p>
 <h2 id="_2">如何调试我的代码?</h2>
 <p>在<code>2020-5-10</code>次提交中更新了debug的用法.</p>
@@ -227,5 +227,5 @@
 
 <!--
 MkDocs version : 1.1
-Build Date UTC : 2020-06-07 05:26:04
+Build Date UTC : 2020-06-07 05:34:56
 -->
