--- a/howto/index.html
+++ b/howto/index.html
@@ -162,6 +162,9 @@
 <li><code>#</code>: 转换为int类型</li>
 <li><code>.</code>: 转换为float类型</li>
 </ul>
+<blockquote>
+<p>使用<code>$</code>加数字如<code>$123</code>会返回str类型的123, 而不是数字123</p>
+</blockquote>
 <div class="admonition tips">
 <p class="admonition-title">贴示</p>
 <p>当转换失败, 会返回<code>&amp;null</code></p>
