--- a/howto/index.html
+++ b/howto/index.html
@@ -154,7 +154,7 @@
 <p>第一个字符应该是<code>a-z</code>或<code>A-Z</code>或<code>_</code></p>
 <p>剩余的字符在第一个字符的基础上允许<code>1-9</code></p>
 </blockquote>
-<h2 id="_2">变量代换符($, #, .)</h2>
+<h2 id="_2">变量代换符(<code>$</code>, <code>#</code>, <code>.</code>)</h2>
 <p>美元符号(<code>$</code>), 井号(<code>#</code>), 和英文句号(<code>.</code>)都是变量代换符, 分别将变量转换为各种数据类型. 使用<code>replacevar</code>函数来替换在<code>var</code>中的变量.</p>
 <ul>
 <li><code>&amp;</code>: 保持原来变量类型</li>
@@ -170,7 +170,7 @@
 <li><code>^(\+|-)?[0-9]*$</code>强制转换成int类型</li>
 <li><code>^(\+|-)?[0-9]*\.[0-9]*$</code>强制转换成float类型</li>
 </ul>
-<h2 id="_3">命令替换符([...])</h2>
+<h2 id="_3">命令替换符(<code>[...]</code>)</h2>
 <p><code>[</code>和<code>]</code>是成对的命令替换符,使用<code>replacefunction</code>来替换.</p>
 <p>命令替换符<strong>仅仅</strong>支持如下命令:</p>
 <ul>
