--- a/howto/index.html
+++ b/howto/index.html
@@ -174,10 +174,38 @@
 <p><code>[</code>和<code>]</code>是成对的命令替换符,使用<code>replacefunction</code>来替换.</p>
 <p>命令替换符<strong>仅仅</strong>支持如下命令:</p>
 <ul>
-<li>addr</li>
-<li>gets</li>
-<li>xscript.</li>
+<li>
+<p><em>addr $name</em>(仅命令替换符)</p>
+<blockquote>
+<p>返回name的内存地址</p>
+</blockquote>
+</li>
+<li>
+<p><em>environ $name</em>(仅命令替换符)</p>
+<blockquote>
+<p>返回系统变量name(没有返回<code>&amp;null</code>)</p>
+</blockquote>
+</li>
+<li>
+<p><em>gets $prompt=?</em></p>
+<blockquote>
+<p>返回用户输入</p>
+</blockquote>
+</li>
+<li>
+<p><em>has $path</em>(仅命令替换符)</p>
+<blockquote>
+<p>判断path路径是否在标准库中存在</p>
+</blockquote>
+</li>
+<li>
+<p><em>xscript.</em></p>
+</li>
 </ul>
+<div class="admonition tips">
+<p class="admonition-title">贴示</p>
+<p><code>仅命令替换符</code>表示只有在<code>[...]</code>中才能使用的命令</p>
+</div>
 <h2 id="xscript_1">xscript.</h2>
 <p><code>xscript.</code>(不要忘记<code>.</code>)命令使用xscript函数来支持函数通过路径获取的功能, 支持获得函数和变量.</p>
 <p>其间使用了一个<code>for</code>循环来遍历<code>lib</code>库的应用位置.</p>
