--- a/choose-xscript/index.html
+++ b/choose-xscript/index.html
@@ -138,7 +138,7 @@
 <p>这是一个好问题</p>
 </blockquote>
 <h2 id="xscript_1">当然应该选择xscript</h2>
-<p>如果你是初学者, 不要使用Scratch, 用xscript练练手, 应该也是可以, xscript比Scratch简单许多.</p>
+<p>如果你是初学者, 可以在使用Scratch后, 用xscript练练手, 熟悉一下真正的编程. 应该也是可以, xscript比Scratch简单许多.</p>
 <p>我认为的xscript优点:</p>
 <ul>
 <li>
@@ -162,6 +162,12 @@
 </ul>
 <h2 id="_1">还是选择其他语言吧</h2>
 <p>你的做法是明智的, xscript太年轻了. 还是使用python编写的, 应该去使用python才对.</p>
+<ul>
+<li>太简单了<blockquote>
+<p>如果你粗略的阅读了一下xscript解释器的所有代码, 你一定会发现: xscript是根据源代码解释的, 而不像python一样, 得先</p>
+</blockquote>
+</li>
+</ul>
 <hr />
 <p>当然, 随你怎么想, xscript只是一个玩具而已.</p>
               
