--- a/howto/index.html
+++ b/howto/index.html
@@ -143,7 +143,7 @@
               
                 <h1 id="xscript">xscript如何工作</h1>
 <blockquote>
-<p>以下所有的函数和变量都在<code>core.XScriptInterpreter</code>中</p>
+<p>以下所有的函数和变量都在<code>xscriptcore.XScriptInterpreter</code>中</p>
 </blockquote>
 <h2 id="block">块(block)</h2>
 <p>块是一组代码, 以块开始符(如<code>for</code>)开始,以<code>end</code>命令结束.</p>
