--- a/learn/config-lib/index.html
+++ b/learn/config-lib/index.html
@@ -155,10 +155,10 @@
 比如<code>os</code>换成<code>_os</code></p>
 </div>
 <h2 id="_3">使用</h2>
-<p>请在<code>lib/__init__.py</code>中添加一行来import刚刚编写的库.</p>
+<p>请在<code>xscriptlib/__init__.py</code>中添加一行来import刚刚编写的库.</p>
 <p>以一个<code>foo</code>为例子:</p>
 <ol>
-<li>编辑<code>lib/__init__.py</code></li>
+<li>编辑<code>xscriptlib/__init__.py</code></li>
 <li>输入<code>import lib.foo as foo</code></li>
 <li>重启解释器</li>
 <li>编写程序测试一下</li>
