--- a/learn/install/index.html
+++ b/learn/install/index.html
@@ -154,6 +154,11 @@ cd xscript
 <h2 id="windows">Windows下安装</h2>
 <p>和Linux一样.</p>
 <h2 id="_1">简单一些</h2>
+<p>运行:</p>
+<pre><code>./setup install
+</code></pre>
+
+<p>然后再把<code>xscript</code>文件复制到某一个<code>PATH</code>目录就可以了</p>
               
             </div>
           </div>
