--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <p>这里是xscript0.0的文档</p>
 </blockquote>
 <h2 id="xscript_1">什么是xscript?</h2>
-<p>xscript是用python编写的一个非常小巧的编程语言, 它的核心(<code>core.py</code>)不会超过1000行.</p>
+<p>xscript是用python编写的一个非常小巧的编程语言, 它的核心(<code>xscriptcore.py</code>)不会超过1000行.</p>
 <p>没有函数, 没有判断结构. 它只有最基本的变量管理, 所有类型的循环结构, 可调用的外部函数(python实现), 没了!</p>
 <blockquote>
 <p>xscript的核心可以缩减很小, 因为所有主要的功能都在库<code>lib</code>中</p>
@@ -227,5 +227,5 @@
 
 <!--
 MkDocs version : 1.1
-Build Date UTC : 2020-06-10 11:13:07
+Build Date UTC : 2020-06-12 08:42:57
 -->
