--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 <p>xscript是用python编写的一个非常小巧的编程语言, 它的核心(<code>xscriptcore.py</code>)不会超过1000行.</p>
 <p>没有函数, 没有判断结构. 它只有最基本的变量管理, 所有类型的循环结构, 可调用的外部函数(python实现), 没了!</p>
 <blockquote>
-<p>xscript的核心可以缩减很小, 因为所有主要的功能都在库<code>lib</code>中</p>
-<p>你可以使用 <code>import lib</code> 来导入该库, 函数定义和用法都和python差不多</p>
+<p>xscript的核心可以缩减很小, 因为所有主要的功能都在库<code>xscriptlib</code>中</p>
+<p>你可以使用 <code>import xscriptlib</code> 来导入该库, 函数定义和用法都和python差不多</p>
 <p>这门语言是设计为嵌入式的, 这样也可以保证安全以及运行时的效果</p>
 </blockquote>
 <h2 id="_1">如何运行我的代码?</h2>
@@ -227,5 +227,5 @@
 
 <!--
 MkDocs version : 1.1
-Build Date UTC : 2020-06-12 08:42:57
+Build Date UTC : 2020-06-12 08:47:41
 -->
