--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               
                 <h1 id="xscript">xscript文档</h1>
 <blockquote>
-<p>这里是xscript0.0的文档</p>
+<p>这里是xscript 0.0 的文档</p>
 </blockquote>
 <h2 id="xscript_1">什么是xscript?</h2>
 <p>xscript是用python编写的一个非常小巧的编程语言, 它的核心(<code>xscriptcore.py</code>)不会超过1000行.</p>
@@ -226,6 +226,6 @@
 </html>
 
 <!--
-MkDocs version : 1.1
-Build Date UTC : 2020-06-12 08:47:41
+MkDocs version : 1.1.2
+Build Date UTC : 2020-06-13 00:25:56.055171+00:00
 -->
