--- a/howto/index.html
+++ b/howto/index.html
@@ -223,7 +223,7 @@
 <li><code>argv</code> - 运行时传递的命令行参数</li>
 <li><code>interpreter</code> - xscript解释器本身</li>
 <li><code>platform</code> - 操作系统的名称</li>
-<li><code>version</code> - xscript的版本号(十六进制)</li>
+<li><code>version</code> - xscript的版本号(str)</li>
 </ul>
 <div class="admonition tips">
 <p class="admonition-title">贴示</p>
