--- a/lib/util/index.html
+++ b/lib/util/index.html
@@ -151,8 +151,13 @@
 </ul>
 <blockquote>
 <p>分别将输入转换为int类型, float类型, 以及按照文件名打开一个文件</p>
-<p>失败都会返回<code>&amp;null</code>.</p>
+<p>失败都会返回<code>&amp;null</code></p>
 </blockquote>
+<hr />
+<div class="admonition tips">
+<p class="admonition-title">注意</p>
+<p><code>xscript.util</code>标准库还添加了一些诸如<code>chr</code>, <code>hex</code>, <code>round</code>的python标准库中的<code>builtins</code>的函数(<code>commit:2020-6-14</code>)</p>
+</div>
               
             </div>
           </div>
