--- a/choose-xscript/index.html
+++ b/choose-xscript/index.html
@@ -156,7 +156,7 @@
 <li>
 <p>拓展性</p>
 <blockquote>
-<p>xscript的标准库是可以拓展的(但是不能直接复制python代码文件, 需要导入该文件重新写函数调用), 只要正确修改<code>lib/__init__.py</code>的代码就行了.</p>
+<p>xscript的标准库是可以拓展的(但是不能直接复制python代码文件, 需要导入该文件重新写函数调用), 只要正确修改<code>xscriptlib/__init__.py</code>的代码就行了.</p>
 </blockquote>
 </li>
 </ul>
@@ -164,7 +164,7 @@
 <p>你的做法是明智的, xscript太年轻了. 还是使用python编写的, 应该去使用python才对.</p>
 <ul>
 <li>太简单了<blockquote>
-<p>如果你粗略的阅读了一下xscript解释器的所有代码, 你一定会发现: xscript是根据源代码解释的, 而不像python一样, 得先</p>
+<p>如果你粗略的阅读了一下xscript解释器的所有代码, 你一定会发现: xscript是根据源代码解释的, 而不像python一样.</p>
 </blockquote>
 </li>
 </ul>
